# station-meteo

./: .gitignore  Cargo.toml  README.md  makefile  rust-toolchain.toml
.cargo/: config.toml
scripts/: flash.sh
src/: main.rs
