[package]
name = "station-meteo"
version = "0.1.0"
authors = ["GrimalDev <bapt.grimaldi@gmail.com>", "ratataque"]
edition = "2018"

[dependencies]
ruduino = {  git = "https://github.com/avr-rust/ruduino", branch = "master" }

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.dev.package."*"]
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[profile.release.package."*"]
opt-level = "s"
